<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/drugs"
            android:icon="@drawable/ic_add"
            android:title="@string/drug_to_use" />
        <item
            android:id="@+id/nav_switch"
            android:icon="@drawable/ic_bell"
            android:title="@string/notification"
            app:actionLayout="@layout/switch_menu" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_user_guide"
            android:title="@string/about_us" />
<!--        <item-->
<!--            android:id="@+id/lang"-->
<!--            android:icon="@drawable/ic_language"-->
<!--            android:title="@string/change_language" />-->

    </group>

</menu>