<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.App.MainConstraint"

    tools:context=".activities.menu.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_add_cow_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="@font/anjoman_semi_bold"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_image"
            style="@style/Theme.App.ImageView.Edit"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_add_cow_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/user_name_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_margin="30dp"
                android:hint="@string/username"
                android:inputType="text"
                android:lines="1"
                android:singleLine="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name_input" />

            <TextView
                android:id="@+id/edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/anjoman_bold"
                android:text="@string/edit_password"
                android:textColor="@color/selected_tab_home"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_input" />

            <EditText
                android:id="@+id/old_password_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_password" />

            <EditText
                android:id="@+id/new_password_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/old_password_input" />

            <EditText
                android:id="@+id/new_password_input_confirm"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_password_input" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/submit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:elevation="8dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:fb_defaultColor="@color/persian_green"
                app:fb_focusColor="@color/black"
                app:fb_radius="15dp"
                app:fb_text="@string/save"
                app:fb_textColor="@color/white"
                app:fb_textFontRes="@font/anjoman_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_password_input_confirm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>