<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.App.MainConstraint.Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login_fragments.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/user_name_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_margin="30dp"
                android:hint="@string/username"
                android:inputType="text"
                android:lines="1"
                android:singleLine="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name_input" />

            <EditText
                android:id="@+id/password_input"
                style="@style/Theme.App.EditText.Login.Input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_input" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/submit"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:elevation="8dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:fb_defaultColor="@color/persian_green"
                app:fb_focusColor="@color/black"
                app:fb_radius="15dp"
                app:fb_text="@string/sign_in"
                app:fb_textColor="@color/white"
                app:fb_textFontRes="@font/anjoman_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</FrameLayout>